@@ -1,0 +1,71 @@
+/****************** <VPR heading BEGIN do not edit this line> *****************
+ *
+ * VR Juggler Portable Runtime
+ *
+ * Original Authors:
+ *   Allen Bierbaum, Patrick Hartling, Kevin Meinert, Carolina Cruz-Neira
+ *
+ * -----------------------------------------------------------------
+ * File:          $RCSfile$
+ * Date modified: $Date$
+ * Version:       $Revision$
+ * -----------------------------------------------------------------
+ *
+ ****************** <VPR heading END do not edit this line> ******************/
+
+/*************** <auto-copyright.pl BEGIN do not edit this line> **************
+ *
+ * VR Juggler is (C) Copyright 1998, 1999, 2000, 2001 by Iowa State University
+ *
+ * Original Authors:
+ *   Allen Bierbaum, Christopher Just,
+ *   Patrick Hartling, Kevin Meinert,
+ *   Carolina Cruz-Neira, Albert Baker
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Library General Public
+ * License as published by the Free Software Foundation; either
+ * version 2 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Library General Public License for more details.
+ *
+ * You should have received a copy of the GNU Library General Public
+ * License along with this library; if not, write to the
+ * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+ * Boston, MA 02111-1307, USA.
+ *
+ *************** <auto-copyright.pl END do not edit this line> ***************/
+
+#include <vpr/IO/Stats/BaseIOStatsStrategy.h>
+#include <vpr/IO/BlockIO.h>
+
+
+void vpr::BaseIOStatsStrategy::setRealObject(vpr::BlockIO* real)
+{ mRealObject = real; }
+
+void vpr::BaseIOStatsStrategy::read_s(ReturnStatus& status,
+                                      void* buffer, const vpr::Uint32 length,
+                                      vpr::Uint32& bytes_read,
+                                      const vpr::Interval timeout)
+{
+   status = mRealObject->read_i(buffer, length, bytes_read, timeout);
+}
+
+void vpr::BaseIOStatsStrategy::readn_s(ReturnStatus& status,
+                                       void* buffer, const vpr::Uint32 length,
+                                       vpr::Uint32& bytes_read,
+                                       const vpr::Interval timeout)
+{
+   status = mRealObject->readn_i(buffer, length, bytes_read, timeout);
+}
+
+void vpr::BaseIOStatsStrategy::write_s(ReturnStatus& status,
+                                       const void* buffer, const vpr::Uint32 length,
+                                       vpr::Uint32& bytes_written,
+                                       const vpr::Interval timeout)
+{
+   status = mRealObject->write_i(buffer, length, bytes_written, timeout);
+}
