@@ -57,7 +57,6 @@ class BlockIO;    // forward declare
  * This is the interface that the BlockIO class expects to deal with.
  * We add on other stats features using mixins that are added by a template composition adapter
  */
-template<class BaseIOType = BlockIO>
 class VPR_CLASS_API BaseIOStatsStrategy
 {
 public:
@@ -69,37 +68,28 @@ public:
    virtual ~BaseIOStatsStrategy()
    {;}
 
-   void setRealObject (BaseIOType* real)
-   {
-      mRealObject = real;
-   }
+   void setRealObject(vpr::BlockIO* real);
 
    enum { IS_NULL = 0 };
 
 public:
-   virtual void read_s (ReturnStatus& status, void* buffer,
-                        const vpr::Uint32 length, vpr::Uint32& bytes_read,
-                        const vpr::Interval timeout = vpr::Interval::NoTimeout)
-   {
-      status = mRealObject->read_i(buffer, length, bytes_read, timeout);
-   }
+   virtual void read_s(ReturnStatus& status,
+                         void* buffer, const vpr::Uint32 length,
+                          vpr::Uint32& bytes_read,
+                          const vpr::Interval timeout = vpr::Interval::NoTimeout);
 
-   virtual void readn_s (ReturnStatus& status, void* buffer,
-                         const vpr::Uint32 length, vpr::Uint32& bytes_read,
-                         const vpr::Interval timeout = vpr::Interval::NoTimeout)
-   {
-      status = mRealObject->readn_i(buffer, length, bytes_read, timeout);
-   }
+   virtual void readn_s(ReturnStatus& status,
+                          void* buffer, const vpr::Uint32 length,
+                           vpr::Uint32& bytes_read,
+                           const vpr::Interval timeout = vpr::Interval::NoTimeout);
 
-   virtual void write_s (ReturnStatus& status, const void* buffer,
-                         const vpr::Uint32 length, vpr::Uint32& bytes_written,
-                         const vpr::Interval timeout = vpr::Interval::NoTimeout)
-   {
-      status = mRealObject->write_i(buffer, length, bytes_written, timeout);
-   }
+   virtual void write_s(ReturnStatus& status,
+                          const void* buffer, const vpr::Uint32 length,
+                           vpr::Uint32& bytes_written,
+                           const vpr::Interval timeout = vpr::Interval::NoTimeout);
 
 protected:
-    BaseIOType*   mRealObject;
+    vpr::BlockIO*   mRealObject;
 };
 
 /**
@@ -107,7 +97,7 @@ protected:
  *
  * NOTE: Must derive from BaseIOStatsStrategy because the compiler still expects that interface
  */
-class NullIOStatsStrategy : public BaseIOStatsStrategy<vpr::BlockIO*>
+class NullIOStatsStrategy : public BaseIOStatsStrategy
 {
 public:
    enum { IS_NULL = 1 };
